fix: updated color contrasts

--- a/doorway-ui-components/src/global/forms.scss
+++ b/doorway-ui-components/src/global/forms.scss
@@ -88,7 +88,7 @@
       @apply px-3;
       border-width: 2px;
       border-color: var(--bloom-color-gray-450);
-      font-size: .75rem;
+      font-size: 0.75rem;
     }
 
     .prepend {
@@ -346,7 +346,7 @@ input[type="number"] {
 
 .field-note {
   @apply text-sm;
-  @apply text-gray-700;
+  @apply text-gray-750;
   white-space: pre-line;
   @apply normal-case;
 }
